k8s-manifest/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: taskflow-app-frontend:latest   
          imagePullPolicy: IfNotPresent         
          ports:
            - containerPort: 80
